# zero2prod

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml
.github/workflows/: rust.yml
.sqlx/: query-177acb5a1fc413bf64e351c24c2ef1fac0470ad08f03ba40f0bcd6d0d11a7c52.json  query-2f9d00b718603f9118ebd9e2f9e08c515601b8d6594bf8f530d8136583386e68.json  query-342915217902d0fce61f39b1e7ac627d58d9ae2984e13b0b6e8108f802fcb8f7.json  query-3a658fbc8eebbf0b51b81c51970a11f80d6309abc9a87bdaa0924dee6164de56.json  query-b844ec321f8a376528ebf413267e1d2c64fbf293f2397401572fae23d2566d49.json  query-bbd898461f38ca08809468d839d6a42282b5210d3380c728e0aa15110cd15548.json  query-bc939668bfcb365ccdee4abc533eb873143d6adb81fa2f62a9ec19bcc53ad41d.json  query-ce37fe03f67f3649e015f26411ff858f6f2858ced4d9bd35702643bc4bea9182.json  query-fcd758cc73675bc17cbac5f0335325e22247cc958d61d2290995bdc0f90ae1d1.json
.timings/: cargo-timing.html
migrations/: 0003_backfill_subscriptions_status.sql  0005_add_on_delete_cascade_to_subscription_tokens.sql  0006_create_users_table.sql
src/: app.rs  auth.rs  config.rs  domain.rs  email.rs  lib.rs  main.rs  templates.rs
src/domain/: mod.rs
src/routes/: confirm.rs  home.rs  mod.rs  newsletter.rs  subscriptions.rs
templates/: login.html
templates/confirmation/: email.html  email.txt  subject.txt
tests/: app.rs  health_check.rs  subscribe.rs
tests/api/: confirm.rs  health_check.rs  main.rs  mocks.rs  newsletter.rs  spawn_app.rs  subscribe.rs  test_app.rs  (+1 more)
(+10 files in other folders)
