[package]
name = "zero2prod"
version = "0.1.0"
authors = ["dmcclung <35938+dmcclung@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dev-dependencies]
claims = "0.7.1"
fake = "2.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = "^0.11"

[dependencies]
actix-web = "4"
anyhow = "1.0.80"
dotenv = "0.15.0"
lettre = "0.11.4"
log = "0.4.20"
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies.chrono]
version = "0.4.33"
default-features = false
features = [
    "clock"
]

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.sqlx]
version = "0.7.3"
features = [
    "postgres", 
    "runtime-tokio-rustls",
    "macros",
    "uuid",
    "chrono",
    "migrate"
]

